src/main/java/com/example/solid/liskovSubsituation/good/Account.java
package com.example.solid.liskovSubsituation.good;

import java.math.BigDecimal;

public abstract class Account {
    abstract void deposit(BigDecimal amount);
}
